# create-vdc-with-edge-portal-api-demo

./: .dockerignore  .gitignore  Dockerfile  Gemfile  Readme.md  example.har  generate-api.bash  package-lock.json  package.json  tsconfig.json  webpack.config.js
docs/portal-api/: openapi.json
docs/vcloud-rest/: openapi.json
docs/vcloud-rest/1.5/schemas/vcloud/: common.json  entity.json  multiSite.json  organization.json  organizationList.json  session.json  task.json
docs/vcloud-rest/schemas/versioning/: versions.json
fixtures/vcr_cassettes/: example.yml
lib/portal/: build.rb  client.rb  error.rb  invalid_authentication_error.rb  session.rb  vdc.rb  vorg.rb
server/: Cargo.toml
server/src/: main.rs
spec/portal/: build_spec.rb  client_spec.rb  session_spec.rb  vdc_spec.rb  vorg_spec.rb
src/: index.ts  script.ts
