[package]
name = "server"
version = "0.1.0"
authors = ["Chris Couzens <ccouzens@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
hyper-tls = "0.4"
http = "0.2"
cookie = "0.13"
tokio = { version = "0.2", features = ["full"] }